--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,25 +5,24 @@ branches:
     - /release.*/
     - master
 
- 
-image: Visual Studio 2017
-
 configuration: Release
 
 environment:
   matrix:
   - SpecFlow_VisualStudioVersion: 2013
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
     VisualStudioVersion: 12.0
   - SpecFlow_VisualStudioVersion: 2015
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     VisualStudioVersion: 14.0
   - SpecFlow_VisualStudioVersion: 2017
+    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     VisualStudioVersion: 15.0
 
   
 before_build:
 - cmd: >-
-    nuget restore SpecFlow.VisualStudio.%SpecFlow_VisualStudioVersion%.sln
-    
+    nuget restore SpecFlow.VisualStudio.%SpecFlow_VisualStudioVersion%.sln  
     set PATH=C:\Program Files (x86)\MSBuild\%VisualStudioVersion%\Bin;%PATH%
 
 build:
