--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,14 +9,14 @@ configuration: Release
 
 environment:
   matrix:
-  - SpecFlow_VisualStudioVersion: 2013
-    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2013
+    SpecFlow_VisualStudioVersion: 2013
     VisualStudioVersion: 12.0
-  - SpecFlow_VisualStudioVersion: 2015
-    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    SpecFlow_VisualStudioVersion: 2015
     VisualStudioVersion: 14.0
-  - SpecFlow_VisualStudioVersion: 2017
-    APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    SpecFlow_VisualStudioVersion: 2017
     VisualStudioVersion: 15.0
 
   
