rewrite before_build

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,11 +21,10 @@ environment:
 
   
 before_build:
-- cmd: >-
-    echo %SpecFlow_VisualStudioVersion%
-    set
-    nuget restore SpecFlow.VisualStudio.%SpecFlow_VisualStudioVersion%.sln  
-    set PATH=C:\Program Files (x86)\MSBuild\%VisualStudioVersion%\Bin;%PATH%
+  - cmd: echo %SpecFlow_VisualStudioVersion%
+  - cmd: set
+  - cmd: nuget restore SpecFlow.VisualStudio.%SpecFlow_VisualStudioVersion%.sln  
+  - cmd: set PATH=C:\Program Files (x86)\MSBuild\%VisualStudioVersion%\Bin;%PATH%
 
 build:
   project: SpecFlow.VisualStudio.%SpecFlow_VisualStudioVersion%.sln
