--- a/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
+++ b/VsIntegration/TechTalk.SpecFlow.VsIntegration.csproj
@@ -67,6 +67,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <StartAction>Program</StartAction>
     <StartArguments>/RootSuffix Exp</StartArguments>
+    <LangVersion>5</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
