--- a/TechTalk.SpecFlow.VisualStudio.CodeBehindGenerator/TechTalk.SpecFlow.VisualStudio.CodeBehindGenerator.csproj
+++ b/TechTalk.SpecFlow.VisualStudio.CodeBehindGenerator/TechTalk.SpecFlow.VisualStudio.CodeBehindGenerator.csproj
@@ -66,6 +66,12 @@
     <Compile Include="..\CommonAssemblyInfo.cs">
       <Link>Properties\CommonAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="CommonParameters.cs" />
+    <Compile Include="DetectGeneratedTestVersionAction.cs" />
+    <Compile Include="DetectGeneratedTestVersionParameters.cs" />
+    <Compile Include="GenerateTestFileAction.cs" />
+    <Compile Include="GenerateTestFileParameters.cs" />
+    <Compile Include="GetTestFullPathAction.cs" />
     <Compile Include="GetTestFullPathParameters.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
