--- a/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
+++ b/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
@@ -106,10 +106,11 @@
     <Compile Include="Generator\GeneratorServices.cs" />
     <Compile Include="Generator\IdeSingleFileGenerator.cs" />
     <Compile Include="Generator\IGeneratorServices.cs" />
-    <Compile Include="Generator\IOutOfProcessTestGeneratorFactory.cs" />
-    <Compile Include="Generator\IRemoteAppDomainTestGeneratorFactory.cs" />
-    <Compile Include="Generator\OutOfProcessTestGenerator.cs" />
-    <Compile Include="Generator\OutOfProcessTestGeneratorFactory.cs" />
+    <Compile Include="Generator\OutOfProcess\IOutOfProcessTestGeneratorFactory.cs" />
+    <Compile Include="Generator\AppDomain\IRemoteAppDomainTestGeneratorFactory.cs" />
+    <Compile Include="Generator\OutOfProcess\OutOfProcessExecutor.cs" />
+    <Compile Include="Generator\OutOfProcess\OutOfProcessTestGenerator.cs" />
+    <Compile Include="Generator\OutOfProcess\OutOfProcessTestGeneratorFactory.cs" />
     <Compile Include="Install\ExternalBrowserGuidanceNotificationService.cs" />
     <Compile Include="Install\GuidanceNotification.cs" />
     <Compile Include="Install\IFileAssociationDetector.cs" />
@@ -124,7 +125,7 @@
     <Compile Include="Options\IntegrationOptions.cs" />
     <Compile Include="ProcessHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Generator\RemoteAppDomainTestGeneratorFactory.cs" />
+    <Compile Include="Generator\AppDomain\RemoteAppDomainTestGeneratorFactory.cs" />
     <Compile Include="Generator\RemoteGeneratorServices.cs" />
     <Compile Include="Tracing\FileTracer.cs" />
     <Compile Include="Tracing\IIdeTracer.cs" />
