--- a/IdeIntegration/packages.config
+++ b/IdeIntegration/packages.config
@@ -5,6 +5,7 @@
   <package id="GitVersionTask" version="3.6.5" targetFramework="net46" developmentDependency="true" />
   <package id="Mono.Cecil" version="0.9.5.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
-  <package id="SpecFlow" version="1.9.0" targetFramework="net45" />
-  <package id="SpecFlow.CustomPlugin" version="1.9.0" targetFramework="net45" />
+  <package id="SpecFlow" version="2.3.2" targetFramework="net46" />
+  <package id="SpecFlow.CustomPlugin" version="2.3.2" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net46" />
 </packages>
