--- a/TechTalk.SpecFlow.VisualStudio.CodeBehindGenerator/packages.config
+++ b/TechTalk.SpecFlow.VisualStudio.CodeBehindGenerator/packages.config
@@ -3,6 +3,7 @@
   <package id="CommandLineParser" version="2.2.1" targetFramework="net45" />
   <package id="GitVersionTask" version="3.6.5" targetFramework="net45" developmentDependency="true" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="SpecFlow" version="1.9.0" targetFramework="net45" />
-  <package id="SpecFlow.CustomPlugin" version="1.9.0" targetFramework="net45" />
+  <package id="SpecFlow" version="2.3.2" targetFramework="net45" />
+  <package id="SpecFlow.CustomPlugin" version="2.3.2" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
 </packages>
