--- a/UnitTests/IdeIntegration.UnitTests/packages.config
+++ b/UnitTests/IdeIntegration.UnitTests/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="FluentAssertions" version="3.2.2" targetFramework="net45" />
   <package id="Moq" version="4.0.10827" requireReinstallation="True" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="NUnit" version="2.6.0.12054" />
-  <package id="SpecFlow" version="1.9.0" targetFramework="net45" />
-  <package id="SpecFlow.CustomPlugin" version="1.9.0" targetFramework="net45" />
+  <package id="SpecFlow" version="2.3.2" targetFramework="net46" />
+  <package id="SpecFlow.CustomPlugin" version="2.3.2" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net46" />
 </packages>
