Add also required parts of the configs, move to correct namespaces

--- a/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
+++ b/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
@@ -105,19 +105,23 @@
     <Compile Include="Bindings\IdeBindingSourceProcessor.cs" />
     <Compile Include="Bindings\ILBindingRegistryBuilder.cs" />
     <Compile Include="Configuration\AppConfig\AppConfigConfigurationLoader.cs" />
+    <Compile Include="Configuration\AppConfig\BindingCultureConfigElement.cs" />
     <Compile Include="Configuration\AppConfig\LanguageConfigElement.cs" />
     <Compile Include="Configuration\AppConfig\StepAssemblyCollection.cs" />
     <Compile Include="Configuration\AppConfig\StepAssemblyConfigElement.cs" />
+    <Compile Include="Configuration\AppConfig\TraceConfigElement.cs" />
     <Compile Include="Configuration\ConfigurationLoader.cs" />
     <Compile Include="Configuration\IConfigurationLoader.cs" />
     <Compile Include="Configuration\IConfigurationHolder.cs" />
     <Compile Include="Configuration\IConfigurationReader.cs" />
+    <Compile Include="Configuration\JsonConfig\BindingCultureElement.cs" />
     <Compile Include="Configuration\JsonConfig\JsonConfig.cs" />
     <Compile Include="Configuration\JsonConfig\JsonConfigurationLoader.cs" />
     <Compile Include="Configuration\JsonConfig\LanguageElement.cs" />
     <Compile Include="Configuration\JsonConfig\SpecFlowElement.cs" />
     <Compile Include="Configuration\JsonConfig\StepAssemblyElement.cs" />
     <Compile Include="Configuration\ConfigurationHolder.cs" />
+    <Compile Include="Configuration\JsonConfig\TraceElement.cs" />
     <Compile Include="Generator\FileBasedSpecFlowConfigurationReader.cs" />
     <Compile Include="Generator\GeneratorServices.cs" />
     <Compile Include="Generator\IdeSingleFileGenerator.cs" />
