Add missing props to the ConfigLoaders

--- a/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
+++ b/IdeIntegration/TechTalk.SpecFlow.IdeIntegration.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Bindings\ILBindingRegistryBuilder.cs" />
     <Compile Include="Configuration\AppConfig\AppConfigConfigurationLoader.cs" />
     <Compile Include="Configuration\AppConfig\BindingCultureConfigElement.cs" />
+    <Compile Include="Configuration\AppConfig\GeneratorConfigElement.cs" />
     <Compile Include="Configuration\AppConfig\LanguageConfigElement.cs" />
     <Compile Include="Configuration\AppConfig\StepAssemblyCollection.cs" />
     <Compile Include="Configuration\AppConfig\StepAssemblyConfigElement.cs" />
@@ -115,6 +116,7 @@
     <Compile Include="Configuration\IConfigurationHolder.cs" />
     <Compile Include="Configuration\IConfigurationReader.cs" />
     <Compile Include="Configuration\JsonConfig\BindingCultureElement.cs" />
+    <Compile Include="Configuration\JsonConfig\GeneratorElement.cs" />
     <Compile Include="Configuration\JsonConfig\JsonConfig.cs" />
     <Compile Include="Configuration\JsonConfig\JsonConfigurationLoader.cs" />
     <Compile Include="Configuration\JsonConfig\LanguageElement.cs" />
@@ -122,6 +124,7 @@
     <Compile Include="Configuration\JsonConfig\StepAssemblyElement.cs" />
     <Compile Include="Configuration\ConfigurationHolder.cs" />
     <Compile Include="Configuration\JsonConfig\TraceElement.cs" />
+    <Compile Include="Configuration\JsonConfig\UnitTestProviderElement.cs" />
     <Compile Include="Generator\FileBasedSpecFlowConfigurationReader.cs" />
     <Compile Include="Generator\GeneratorServices.cs" />
     <Compile Include="Generator\IdeSingleFileGenerator.cs" />
@@ -133,6 +136,7 @@
     <Compile Include="Generator\OutOfProcess\OutOfProcessTestGeneratorFactory.cs" />
     <Compile Include="Generator\OutOfProcess\Result.cs" />
     <Compile Include="Configuration\SpecFlowConfiguration.cs" />
+    <Compile Include="Generator\SpecFlowGeneratorConfiguration.cs" />
     <Compile Include="Install\ExternalBrowserGuidanceNotificationService.cs" />
     <Compile Include="Install\GuidanceNotification.cs" />
     <Compile Include="Install\IFileAssociationDetector.cs" />
